welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:24: error: object Int is not a member of package ch
		setCouleurBrosse(T(i+ch.Int(litMessage())))
                                        ^